[package]
name = "zspy"
version = "0.1.0"
edition = "2021"

[dependencies]
zenoh = "1.1.1"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"

[build-dependencies]
prost-build = "0.12"
